$Id: ChangeLog,v 1.195 2005/04/19 10:23:39 haraldkipp Exp $

2005-04-19  Harald Kipp  <harald.kipp@egnite.de>

	* app/ftpd/ftpserv.c: Compiler warning added, if target is not
	Ethernut 2.

	* app/inetq/inetq.c: More detailed description added.

	* app/tcps/tcps.c: Description updated.

	* app/timers/timers.c: Description updated and ARM support added.

	* crt/putf.c: Support for size_t modifier added. Thanks to Tom 
	Lynn.


2005-04-15  Ole Reinhardt <ole.reinhardt@embedded-it.de>
	* dev/unix_devs.c
        Changed the delimiting of the nativeName into ip and port. 
        Now first check if nativeName == "stdio". Otherwise strtok will 
        segfault. Strange... Perhaps a problem with the static declaration 
        of the option strings? I don't know. Very mysterious.

2005-04-08  Ole Reinhardt <ole.reinhardt@embedded-it.de>
	* net/arpin.c, net/arpout.c, net/ethin.c, net/ethout.c,
          net/ipcpin.c, net/ipcpout.c, net/ipout.c, net/lcpin.c,
          net/lcpout.c, net/papin.c, net/papout.c, net/pppdebug.c,
          net/pppin.c, net/pppout.c, net/udpsock.c, net/tcpin.c, 
	  pro/sntp.c, pro/wins.c,
	added <sys/types.h> (__APPLE__) and <netinet/in.h> (__linux__) 
	for htons and simmilar. 
        Fixes to make the unix emulation compiling again. Hope this won't 
	break anything.

2005-04-04  Matthias Ringwald <mringwal@.inf.ethz.ch>

	* include/irqreg.h, include/irqreg_unix.h: most unix emulation
        specific stuff now in irqreg_unix.h. #warning "MCU not defined"

2005-04-05  Harald Kipp  <harald.kipp@egnite.de>

	* os/version.c: Updated for the next pre-release 3.9.6. Still
	no version 4, because of several problems with ARM7 (see below). 
	Anyway, most applications should now run on the ARM CPU with 
	minor or no modification.

	* include/netinet/if_ether.h, include/netinet/ip.h,
	include/netinet/tcp.h: Finally the TCP/IP stack is running on 
	the ARM7 platform. Added the 'packed' attribute to several 
	protocol structures.
